# recsys-project

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.inference  Makefile  README.md  app_streamlit.py  banner_recommender_notebook (1).ipynb  checkpoint.py  config.py  data.py  docker-compose.yaml  encoding.py  main.py  model.py  pyproject.toml  requirements-api.txt  simple_twotoer.py
artifacts/: twotower.pt  twotower_summary.json
artifacts/pytorch_retrieval/: item_embeddings.npy  mappings.json  metadata.json  model.pt  retrieval_model.pt
backend/: alembic.ini
backend/cmd/api/: main.py
backend/migrations/versions/: 6ece491493e2_create_users_table.py
backend/src/api/: deps.py  router.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
config/: config.yaml
ctr_artifacts_streamlit/: metadata.json  metrics.json  validation_preview.csv
data/db/: banners.csv  data_dictionary.csv  users.csv
data/raw/: load_to_existing_postgres.py
deepfm_artifacts/: deepfm_model.pt  metadata.json  metrics.json
frontend/: README.md  app.js  index.html  styles.css
frontend/js/: api.js  constants.js  dom.js  main.js  renderers.js  state.js  storage.js  utils.js
inference_service/: main.py
notebooks/: reaserch.ipynb  reaserch_banner.ipynb  twotower.ipynb
src/: checkpoint.py  config.py  data.py  features.py  model.py
src/components/: stage_00_data_ingestion.py  stage_01_data_validation.py  stage_02_data_transformation.py  stage_03_model_trainer.py
src/config/: configuration.py
src/pipeline/: als_baseline.py  als_baseline_rewrite.py  inference.py  main.py  tensorflow.py  tensorflow_two_tower.py  train.py  train_pipeline.py
src/ranker/: artifacts.py  inference.py  train.py  train_deepfm.py
src/retrieval/: data_loader.py  datasets.py  inference.py  preprocessing.py  train.py  twotower_minimal.py
src/retrival/: preprocessing.py  twotower_minimal.py
src/scripts/: pytorch.py  pytorch_infer.py
src/twotower/: __init__.py  core.py
src/utils/: util.py
tests/: test_retrieval_args.py  test_retrieval_modeling.py  test_retrieval_train.py
tests/backend/: test_recommendations_with_retrieval.py  test_retrieval_api.py  test_retrieval_service.py
twotower/: __init__.py
(+74 files in other folders)
