[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "recsys-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "alembic>=1.18.4",
    "psycopg>=3.3.3",
    "PyYAML>=6.0.2",
]

[project.optional-dependencies]
api = [
    "fastapi[standard]>=0.135.3",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.2.9",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.43",
]
inference = [
    "catboost>=1.2.10",
    "fastapi[standard]>=0.135.3",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
]
train = [
    "catboost>=1.2.10",
    "jupyter>=1.1.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "streamlit>=1.56.0",
    "torch>=2.11.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "src*"]
namespaces = true

[[tool.uv.index]]
url = "https://pytorch.org/"
