[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "recsys-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "alembic>=1.18.4",
    "psycopg[binary]>=3.2.9",
    "psycopg>=3.3.3",
    "PyYAML>=6.0.2",
    "fastapi[standard]>=0.135.3",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.43",
    "catboost>=1.2.10",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "jupyter>=1.1.1",
    "rich>=14.0.0",
    "streamlit>=1.56.0",
    "pytest>=9.0.3",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "src*"]
namespaces = true

[[tool.uv.index]]
url = "https://pytorch.org/"
